# memory-over-maps

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  base_nav.yaml  demo.yaml  goatcore.yaml  hm3d.yaml  hm3d_ovon.yaml  mp3d.yaml
demo/: demo.py
docs/: data.md  demo.md
scripts/: install.sh  prepare_data.py  render_rgbd.py
src/: __init__.py
src/cli/: __init__.py  arg_groups.py  eval_goatcore.py  eval_hm3d.py  eval_mp3d.py  eval_ovon.py  eval_sunrgbd.py
src/dataloaders/: __init__.py  base.py  custom.py  goatcore.py  hm3d.py  mp3d.py  ovon.py  sunrgbd.py
src/evaluation/: __init__.py  helpers.py  metrics.py  setup.py
src/models/: __init__.py
src/models/navigation/: __init__.py  agents.py  pointnav_net.py  pointnav_policy.py
src/models/retrieval/: __init__.py  align_feature_extractor.py  base_feature_extractor.py  clip_feature_extractor.py  feature_extractor_factory.py  flava_feature_extractor.py  hybrid_retriever.py  model_registry.py  qwen3_vl_feature_extractor.py  registry.py  siglip2_feature_extractor.py
src/models/segmentation/: __init__.py  sam3_segmenter.py
src/models/vlm/: __init__.py  qwen2_5_vl.py
src/pipelines/: __init__.py  localization.py  navigation.py  retrieval.py
src/utils/: __init__.py  config.py  geometry.py  image.py  keyframe.py  multi_view_fusion.py  projection.py
