[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mom"
authors = [{name = "Rui Zhou", email = "rui.zhou2@uzh.ch"}]
description = "Memory Over Maps: 3D Object Localization Without Reconstruction"
requires-python = ">=3.9"
version = "1.0.0"
dependencies = [
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "transformers>=4.57.0",
    "accelerate>=0.26.0",
    "faiss-cpu>=1.7.4",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"src/cli/eval_hm3d.py" = ["E402"]
"src/cli/eval_mp3d.py" = ["E402"]
"src/cli/eval_ovon.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
